Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-322

Text color of tool tips is wrong in dark themes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 1.3.0
    • Qt Creator 1.3.0 rc1
    • Editors
    • None
    • 2e82c14abc4b22f93de96517626f35849f2ef7b0

    Description

      The text color in the tool tips is often wrong for dark themes. This is probably due to it taking the default color for labels even though the background is that of a tool tip.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lindeije Thorbjørn Lindeijer (closed Nokia identity) (Inactive)
            lindeije Thorbjørn Lindeijer (closed Nokia identity) (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes