Fixed function argument widget text color in dark themes

By setting the window and button text colors to the tool tip text color,
since a tool tip background is drawn.

Task-number: QTCREATORBUG-322